--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "flowframe/laravel-trend": "^0.4.0",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-sitemap": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
