--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/dbal": "^4.4",
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.4.0",
+        "intervention/image": "*",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
